# AI-Agents

./: .env  .gitignore  main.ipynb  main.py  practice1_response.ipynb  practice2_agent.ipynb  practice3_memory.ipynb  practice4_tools.ipynb  pyproject.toml  tools.py
config/: agents.yaml  tasks.yaml
output/: content_harvest.md  final_report.md  summary.md
output-save/: content_harvest.md  final_report.md  summary.md
